--- a/00-Docker-Images/03-kube-frontend-nginx/V1-Release/default.conf
+++ b/00-Docker-Images/03-kube-frontend-nginx/V1-Release/default.conf
@@ -1,30 +1,26 @@
 server {
     listen       80;
     server_name  localhost;
-
-    #charset koi8-r;
-    #access_log  /var/log/nginx/host.access.log  main;
-
-    #location / {
-    #   root   /usr/share/nginx/html;
-    #    index  index.html index.htm;
-    #}
-
+    
     location / {
-    # Update your backend application Kubernetes Cluster-IP Service name  and port below
-    # proxy_pass http://<Backend-ClusterIp-Service-Name>:<Port>;  
-    proxy_pass http://my-backend-service:8080;
+        # 代理到后端Kubernetes服务
+        proxy_pass http://my-backend-service:8080;
+        
+        # 设置代理头信息
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
     }
-
-    #error_page  404              /404.html;
-    # redirect server error pages to the static page /50x.html
-    #
+    
+    # 健康检查端点
+    location /health {
+        return 200 "healthy";
+        add_header Content-Type text/plain;
+    }
+    
+    # 错误页面配置
     error_page   500 502 503 504  /50x.html;
     location = /50x.html {
         root   /usr/share/nginx/html;
     }
-
-    
-
-}
-
+} # 结束server块
