--- a/06-YAML-Basics/sample-file.yml
+++ b/06-YAML-Basics/sample-file.yml
@@ -22,7 +22,7 @@ metadata: # Dictionary
 spec:
   containers: # List
     - name: myapp
-      image: stacksimplify/kubenginx:1.0.0
+      image: grissomsh/kubenginx:1.0.0
       ports: # List
         - containerPort: 80
           protocol: "TCP"
