--- a/07-PODs-with-YAML/kube-manifests/02-pod-definition.yml
+++ b/07-PODs-with-YAML/kube-manifests/02-pod-definition.yml
@@ -7,7 +7,7 @@ metadata: # Dictionary
 spec:
   containers: # List
     - name: myapp
-      image: stacksimplify/kubenginx:1.0.0
+      image: grissomsh/kubenginx:1.0.0
       ports:
         - containerPort: 80
 
