--- a/08-ReplicaSets-with-YAML/kube-manifests/02-replicaset-definition.yml
+++ b/08-ReplicaSets-with-YAML/kube-manifests/02-replicaset-definition.yml
@@ -15,7 +15,7 @@ spec:
     spec:
       containers: # List
         - name: myapp2-container
-          image: stacksimplify/kubenginx:2.0.0
+          image: grissomsh/kubenginx:2.0.0
           ports:
             - containerPort: 80
 
