--- a/09-Deployments-with-YAML/kube-manifests/02-deployment-definition.yml
+++ b/09-Deployments-with-YAML/kube-manifests/02-deployment-definition.yml
@@ -15,7 +15,7 @@ spec:
     spec:
       containers: # List
         - name: myapp3-container
-          image: stacksimplify/kubenginx:3.0.0
+          image: grissomsh/kubenginx:3.0.0
           ports:
             - containerPort: 80
 
